guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  type: NodePort
  ports:
  - name: http
    targetPort: 80
    protocol: TCP
  selector:
