guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-localhost
  namespace: guestbook-ui
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.cluster.local
    http:
      paths:
      - backend:
          service:
            name: guestbook-ui
            port:
              number: 80
        path: /
        pathType: Prefix
